// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render correctly 1`] = `
.c0 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  capitalize={false}
  e2e="defaultLink"
  italic={false}
  opacity={1}
  size="1rem"
  uppercase={false}
  weight={400}
>
  <styled.a
    capitalize={false}
    e2e="defaultLink"
    italic={false}
    opacity={1}
    size="1rem"
    uppercase={false}
    weight={400}
  >
    <a
      className="c0"
      data-e2e="defaultLink"
      opacity={1}
      size="1rem"
    >
      MyLink
    </a>
  </styled.a>
</Link>
`;

exports[`Link should render correctly with capitalize 1`] = `
.c0 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: capitalize;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  capitalize={true}
  e2e="defaultLink"
  italic={false}
  opacity={1}
  size="1rem"
  uppercase={false}
  weight={400}
>
  <styled.a
    capitalize={true}
    e2e="defaultLink"
    italic={false}
    opacity={1}
    size="1rem"
    uppercase={false}
    weight={400}
  >
    <a
      className="c0"
      data-e2e="defaultLink"
      opacity={1}
      size="1rem"
    >
      MyLink
    </a>
  </styled.a>
</Link>
`;

exports[`Link should render correctly with italic 1`] = `
.c0 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: none;
  font-style: italic;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  capitalize={false}
  e2e="defaultLink"
  italic={true}
  opacity={1}
  size="1rem"
  uppercase={false}
  weight={400}
>
  <styled.a
    capitalize={false}
    e2e="defaultLink"
    italic={true}
    opacity={1}
    size="1rem"
    uppercase={false}
    weight={400}
  >
    <a
      className="c0"
      data-e2e="defaultLink"
      opacity={1}
      size="1rem"
    >
      MyLink
    </a>
  </styled.a>
</Link>
`;

exports[`Link should render correctly with opacity 1`] = `
.c0 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 0.5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  capitalize={false}
  e2e="defaultLink"
  italic={false}
  opacity={0.5}
  size="1rem"
  uppercase={false}
  weight={400}
>
  <styled.a
    capitalize={false}
    e2e="defaultLink"
    italic={false}
    opacity={0.5}
    size="1rem"
    uppercase={false}
    weight={400}
  >
    <a
      className="c0"
      data-e2e="defaultLink"
      opacity={0.5}
      size="1rem"
    >
      MyLink
    </a>
  </styled.a>
</Link>
`;

exports[`Link should render correctly with size 1`] = `
.c0 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 32px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  capitalize={false}
  e2e="defaultLink"
  italic={false}
  opacity={1}
  size="32px"
  uppercase={false}
  weight={400}
>
  <styled.a
    capitalize={false}
    e2e="defaultLink"
    italic={false}
    opacity={1}
    size="32px"
    uppercase={false}
    weight={400}
  >
    <a
      className="c0"
      data-e2e="defaultLink"
      opacity={1}
      size="32px"
    >
      MyLink
    </a>
  </styled.a>
</Link>
`;

exports[`Link should render correctly with uppercase 1`] = `
.c0 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: uppercase;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  capitalize={false}
  e2e="defaultLink"
  italic={false}
  opacity={1}
  size="1rem"
  uppercase={true}
  weight={400}
>
  <styled.a
    capitalize={false}
    e2e="defaultLink"
    italic={false}
    opacity={1}
    size="1rem"
    uppercase={true}
    weight={400}
  >
    <a
      className="c0"
      data-e2e="defaultLink"
      opacity={1}
      size="1rem"
    >
      MyLink
    </a>
  </styled.a>
</Link>
`;

exports[`Link should render correctly with weight 1`] = `
.c0 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 500;
  font-size: 1rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  capitalize={false}
  e2e="defaultLink"
  italic={false}
  opacity={1}
  size="1rem"
  uppercase={false}
  weight={500}
>
  <styled.a
    capitalize={false}
    e2e="defaultLink"
    italic={false}
    opacity={1}
    size="1rem"
    uppercase={false}
    weight={500}
  >
    <a
      className="c0"
      data-e2e="defaultLink"
      opacity={1}
      size="1rem"
    >
      MyLink
    </a>
  </styled.a>
</Link>
`;
